# vanilla_status

./: Cargo.toml  README.md
src/: imports.rs  lib.rs  singletons.rs
src/buddy/: mod.rs  status.rs
src/buddy/status/: helper.rs  special_s.rs  special_s_dash.rs  special_s_end.rs  special_s_fail.rs  special_s_wall.rs
src/common/status/: Glide.rs  GlideStart.rs
src/demon/: special_hi.rs  special_hi_fall.rs  special_hi_rise.rs
src/edge/: mod.rs
src/edge/status/: special_hi.rs
src/eflame/: mod.rs  status.rs
src/eflame/status/: special_lw.rs  special_lw_out.rs  special_lw_standby.rs  special_n_attack.rs  special_n_hold.rs  special_s.rs
src/element/: helper.rs  mod.rs  status.rs
src/element/status/: special_lw.rs  special_lw_out.rs  special_lw_standby.rs
src/elight/: mod.rs  status.rs
src/elight/status/: special_hi_jump.rs  special_lw.rs  special_lw_out.rs  special_lw_standby.rs  special_n.rs  special_n_end.rs  special_n_hold.rs  special_s.rs  special_s_end.rs  special_s_forward.rs
src/ike/: mod.rs  status.rs
src/ike/status/: special_n_loop.rs
src/link/: mod.rs
src/link/boomerang/: mod.rs  status.rs
src/lucario/: acmd.rs  mod.rs  status.rs
src/lucario/acmd/: aura.rs
src/murabito/: mod.rs
src/mythra/: special_lw.rs  special_lw_out.rs  special_lw_standby.rs
src/purin/: mod.rs
src/shulk/: special_s.rs  special_s_fall.rs  special_s_jump.rs  special_s_landing.rs
src/sonic/: mod.rs  status.rs
src/template/: mod.rs  status.rs
src/trail/: mod.rs  status.rs
src/wiifit/: mod.rs
src/zelda/: mod.rs  status.rs
(+23 files in other folders)
